force-app/main/default/objects/Asset/fields/Additional_Scheduling_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Scheduling_Information__c</fullName>
    <label>Additional Scheduling Information</label>
    <type>TextArea</type>
</CustomField>