force-app/main/default/objects/Asset/fields/LastSuggestedMaintenanceDate__c.field-meta.xml
<CustomField>
    <fullName>LastSuggestedMaintenanceDate__c</fullName>
    <label>Date of the last work order in the nex</label>
    <type>Date</type>
</CustomField>