force-app/main/default/objects/Asset/fields/LMRA__c.field-meta.xml
<CustomField>
    <fullName>LMRA__c</fullName>
    <label>LMRA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LMRA_Type</valueSetName>
    </valueSet>
</CustomField>