force-app/main/default/objects/Asset/fields/Notify_Customer_When_En_Route__c.field-meta.xml
<CustomField>
    <fullName>Notify_Customer_When_En_Route__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notify Customer When En Route</label>
    <type>Checkbox</type>
</CustomField>