force-app/main/default/objects/Asset/fields/Recurrence_Text__c.field-meta.xml
<CustomField>
    <fullName>Recurrence_Text__c</fullName>
    <label>Recurrence Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>